fixtures/solidity/translated_semantic_tests/errors/require_error_string_literal/require_error_string_literal.sol
error CustomError(string);
contract C
{
    function f() external pure
    {
        require(false, CustomError("errorReason"));
    }
    function g() external pure
    {
        require(false, CustomError("anotherReason"));
    }
}